--- a/core/azure-pipelines (1).yml
+++ b/core/azure-pipelines (1).yml
@@ -17,7 +17,7 @@ steps:
       sudo update-alternatives --set phar.phar /usr/bin/phar.phar$(phpVersion)
       php -version
   displayName: 'Use PHP version $(phpVersion)'
-- script: COMPOSER=core/composer.json composer install --no-interaction --prefer-dist 
+- script: COMPOSER=core/composer.json composer install --no-interaction --prefer-dist --no-scripts
   displayName: 'composer install'
 - script: php artisan migrate
   displayName: 'php artisan migrate'
