--- a/core/azure-pipelines (1).yml
+++ b/core/azure-pipelines (1).yml
@@ -19,8 +19,8 @@ steps:
   displayName: 'Use PHP version $(phpVersion)'
 - script: COMPOSER=core/composer.json composer install --no-interaction --prefer-dist --no-scripts
   displayName: 'composer install' 
-- script: php ./artisan migrate
-  displayName: 'php ./artisan migrate'
+- script: php core/artisan migrate
+  displayName: 'php core/artisan migrate'
 - task: ArchiveFiles@1
   displayName: 'Archive files'
   inputs:
