Update azure-pipelines (1).yml for Azure Pipelines

--- a/core/azure-pipelines (1).yml
+++ b/core/azure-pipelines (1).yml
@@ -26,6 +26,7 @@ steps:
   displayName: 'composer install' 
 - script:
     php artisan storage:link  
+    php artisan config:cache
     php artisan migrate --seed
   workingDirectory: $(rootFolder)
   displayName: 'php artisan' 
