Update azure-pipelines (1).yml for Azure Pipelines

--- a/core/azure-pipelines (1).yml
+++ b/core/azure-pipelines (1).yml
@@ -28,7 +28,7 @@ steps:
 - task: DownloadSecureFile@1
   name: envFile
   inputs:
-     secureFile: '.env' 
+     secureFile: 'env_staging.txt' 
   displayName: 'Copy Env File'
 - script: cp -f $(envFile.secureFilePath) .env
   displayName: 'Copy Env File'
