--- a/core/azure-pipelines (1).yml
+++ b/core/azure-pipelines (1).yml
@@ -24,13 +24,13 @@ steps:
 - script:  composer install --no-interaction --prefer-dist --no-scripts 
   workingDirectory: $(rootFolder)
   displayName: 'composer install' 
-
 - task: DownloadSecureFile@1
   name: envFile
   inputs:
      secureFile: 'env_staging.txt' 
   displayName: 'Download Env File'
-- script: cp -f $(envFile.secureFilePath) .env
+
+- script: cp -f $(envFile.secureFilePath) $(rootFolder)/.env
   displayName: 'Copy env File'
 - script: 
     php artisan migrate
