update config file

--- a/web.config
+++ b/web.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<configuration>
+<system.webServer>
 <rewrite>
+
     <rules>
     <rule name="Hide Yii Index" stopProcessing="true">
         <match url="." ignoreCase="false" />
@@ -11,3 +14,5 @@
     </rule> 
     </rules>
 </rewrite>
+</system.webServer>
+</configuration>
