--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,10 @@ core/npm-debug.log
 core/yarn-error.log
 .idea/*
 /storage
- 
+assets/workFile/*
+assets/templates/*
+assets/software/*
+assets/images/*
+assets/errors/*
+assets/admin/*
+assets/font/*
