--- a/.htaccess
+++ b/.htaccess
@@ -14,7 +14,7 @@
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^(.*)$ /public/$1 [NC,L,QSA]
+    RewriteRule ^(.*)$ /core/$1 [NC,L,QSA]
      
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
