--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-core/node_modules
-core/public/hot
-core/public/storage
-core/storage/*.key
-core/vendor
-core/.env
-core/.env.backup
-core/.phpunit.result.cache
-core/docker-compose.override.yml
-core/Homestead.json
-core/Homestead.yaml
-core/npm-debug.log
-core/yarn-error.log
+node_modules
+public/hot
+public/storage
+storage/*.key
+vendor
+.env
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
 .idea/*
 assets/workFile/*
 assets/templates/*
