--- a/web.config
+++ b/web.config
@@ -1,17 +1,31 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
-   <rewrite>
+    <rewrite>
       <rules>
-         <rule name="Redirect to https">
-            <match url="(.*)"/>
+        <rule name="Imported Rule 1" stopProcessing="true">
+          <match url="^(.*)/$" ignoreCase="false" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Permanent" url="/{R:1}" />
+        </rule>
+        <rule name="Imported Rule 2" stopProcessing="true">
+          <match url="^" ignoreCase="false" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="index.php" />
+          <rule name=”Redirect to https”>
+            <match url=”(.*)”/>
             <conditions>
-                <add input="{HTTPS}" pattern="Off"/>
-                <add input="{REQUEST_METHOD}" pattern="^get$|^head$" />
+                <add input=”{HTTPS}” pattern=”Off”/>
+                <add input=”{REQUEST_METHOD}” pattern=”^get$|^head$” />
             </conditions>
-            <action type="Redirect" url="https://{HTTP_HOST}/public/{R:1}"/>
+            <action type=”Redirect” url=”https://{HTTP_HOST}/{R:1}”/>
          </rule>
+        </rule>
       </rules>
     </rewrite>
-</system.webServer>
+  </system.webServer>
 </configuration>
