--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "ezyang/htmlpurifier": "^4.13",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^7.1.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.11",
@@ -28,7 +28,8 @@
         "stripe/stripe-php": "^7.72",
         "textmagic/sdk": "dev-master",
         "twilio/sdk": "^6.23",
-        "vonage/client": "^2.4"
+        "vonage/client": "^2.4", 
+        "microsoft/azure-storage-blob": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
