--- a/DockerfilePhpMain
+++ b/DockerfilePhpMain
@@ -1,7 +1,8 @@
 FROM php:8.1-fpm
 
 RUN apt update
-RUN add-apt-repository ppa:ondrej/php
-RUN apt update
+# RUN apt install software-properties-common
+# RUN add-apt-repository ppa:ondrej/php -y
+# RUN apt update
 
-RUN apt install -y php8.1-common php8.1-mysql php8.1-xml php8.1-xmlrpc php8.1-curl php8.1-gd php8.1-imagick php8.1-dev php8.1-imap php8.1-mbstring php8.1-opcache php8.1-soap php8.1-zip php8.1-redis php8.1-intl -y
+# RUN apt install -y php8.1-common php8.1-mysql php8.1-xml php8.1-xmlrpc php8.1-curl php8.1-gd php8.1-imagick php8.1-dev php8.1-imap php8.1-mbstring php8.1-opcache php8.1-soap php8.1-zip php8.1-redis php8.1-intl -y
