--- a/DockerfilePhpMain
+++ b/DockerfilePhpMain
@@ -1,8 +1,30 @@
-FROM php:8.1-fpm
+FROM ubuntu:20.04
+
+ARG DEBIAN_FRONTEND=noninteractive
+
+WORKDIR /usr/share/nginx/html 
 
 RUN apt update
-# RUN apt install software-properties-common
-# RUN add-apt-repository ppa:ondrej/php -y
-# RUN apt update
 
-# RUN apt install -y php8.1-common php8.1-mysql php8.1-xml php8.1-xmlrpc php8.1-curl php8.1-gd php8.1-imagick php8.1-dev php8.1-imap php8.1-mbstring php8.1-opcache php8.1-soap php8.1-zip php8.1-redis php8.1-intl -y
+RUN apt-get install -y software-properties-common
+RUN add-apt-repository ppa:ondrej/php
+RUN apt update
+
+RUN apt install -y php8.1 php8.1-cli
+RUN apt install -y php8.1-common php8.1-mysql php8.1-xml php8.1-xmlrpc php8.1-curl php8.1-gd php8.1-imagick php8.1-cli php8.1-dev php8.1-imap php8.1-mbstring php8.1-opcache php8.1-soap php8.1-zip php8.1-redis php8.1-intl
+RUN apt install -y php8.1-fpm
+COPY . .
+RUN rm -rf nginx-conf
+
+RUN chmod 555 -R .
+RUN apt install -y wget
+RUN wget -O composer-setup.php https://getcomposer.org/installer
+RUN php composer-setup.php --install-dir=/usr/local/bin --filename=composer
+
+RUN composer -V
+# RUN composer require composer-runtime-api
+RUN composer install --no-interaction --prefer-dist --no-scripts 
+
+# RUN php artisan migrate --force
+
+CMD ["php-fpm"]
