--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -1,37 +1,35 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
+
 
 events {
-    worker_connections 10068;
-    multi_accept on;
+    worker_connections  1024;
 }
 
+
 http {
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log off;
-    error_log /dev/stderr;
+    access_log  /var/log/nginx/access.log  main;
 
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
 
     server {
         listen 80;
-        root /usr/share/nginx/html;
+        root /html;
         index index.php;
         server_name localhost;
 
@@ -41,7 +39,7 @@ http {
 
         location ~ [^/]\.php(/|$) {
             fastcgi_split_path_info ^(.+?\.php)(|/.*)$;
-            fastcgi_pass php-fpm-host:9000;
+            fastcgi_pass unix:/run/php/php8.1-fpm.sock;
             include fastcgi_params;
             fastcgi_param HTTP_PROXY "";
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
