updated docker file

--- a/DockerfileNginx
+++ b/DockerfileNginx
@@ -26,8 +26,6 @@ RUN php composer-setup.php --install-dir=/usr/local/bin --filename=composer
 RUN rm composer-setup.php
 
 RUN composer -V
-
-RUN mkdir /run/php
 COPY . .
 RUN chmod 777 -R /html 
 RUN composer install --no-interaction --prefer-dist --no-scripts 
@@ -35,6 +33,10 @@ RUN composer install --no-interaction --prefer-dist --no-scripts
 COPY nginx-conf/nginx.conf /etc/nginx/nginx.conf
 # COPY nginx-conf/default.conf /etc/nginx/conf.d/default.conf
 COPY nginx-conf/fastcgi_params /etc/nginx/fastcgi_params
+
+RUN sed 's/www-data/nginx/' /etc/php/8.1/fpm/pool.d/www.conf > /etc/php/8.1/fpm/pool.d/nginx.conf
+RUN rm /etc/php/8.1/fpm/pool.d/www.conf
+RUN mkdir /run/php
 
 RUN rm -rf /html/nginx-conf
 
