--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,14 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.1.0",
         "intervention/image": "^2.5",
+        "khsing/world": "^9.0",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "mailjet/mailjet-apiv3-php": "^1.4",
         "messagebird/php-rest-api": "^1.20",
+        "microsoft/azure-storage-blob": "*",
         "mollie/laravel-mollie": "^2.14",
         "phpmailer/phpmailer": "^6.6",
         "razorpay/razorpay": "^2.5",
@@ -28,8 +30,7 @@
         "stripe/stripe-php": "^7.72",
         "textmagic/sdk": "dev-master",
         "twilio/sdk": "^6.23",
-        "vonage/client": "^2.4", 
-        "microsoft/azure-storage-blob": "*"
+        "vonage/client": "^2.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
