--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "phpmailer/phpmailer": "^6.6",
         "razorpay/razorpay": "^2.5",
         "sendgrid/sendgrid": "^7.6",
+        "spatie/laravel-permission": "^5.5",
         "stripe/stripe-php": "^7.72",
         "textmagic/sdk": "dev-master",
         "twilio/sdk": "^6.23",
