added dynamic system for mail configuration for dot env file

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:HjbkHgkCQqmXL1K/hr4Ma24Itw2QcZglZlqUZ7D4rRs=
-APP_DEBUG=true
+APP_DEBUG=false
 
 APP_URL=http://127.0.0.1:8000
 ASSET_URL=http://127.0.0.1:8000
@@ -21,7 +21,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtpout.secureserver.net
 MAIL_PORT=465
 mail_username=dureforce@dure-sameen.com
-MAIL_PASSWORD=b+Pretr?0aTrast=!lc3
+MAIL_PASSWORD=g6BEw2GzLfZ4Dp5ZFCPgdAUiWI1FqA83
 MAIL_ENCRYPTION=ssl
 mail_from_address="dureforce@dure-sameen.com"
 MAIL_FROM_NAME="DureForce team"
