--- a/.env-dev
+++ b/.env-dev
@@ -9,13 +9,13 @@ APP_FORCE_HTTPS=false
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=dureforcesignupdb
-DB_USERNAME=root
-DB_PASSWORD=
 
+DB_CONNECTION=mysql
+DB_HOST=dureforce.mysql.database.azure.com
+DB_PORT=3306
+DB_DATABASE=dureforce_dev
+DB_USERNAME=dureforce_admin
+DB_PASSWORD=2e7atLLLyKEuHvVH4uVT
 
 
 AZURE_STORAGE_NAME=stgdureforcestg
