--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "khsing/world": "^9.0",
         "laravel-validation-rules/credit-card": "^1.7",
         "laravel/framework": "^8.12",
+        "laravel/jetstream": "*",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
