--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.1.0",
+        "inertiajs/inertia-laravel": "^0.6.3",
         "intervention/image": "^2.5",
         "khsing/world": "^9.0",
         "laravel-validation-rules/credit-card": "^1.7",
