--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue": "^0.8.0",
         "ant-design-vue": "^1.7.8"
     }
 }
