--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Http/Helpers/helpers.php"
+            "app/Http/Helpers/helpers.php",
+            "app/Http/Helpers/redisHelper.php"
         ]
     },
     "autoload-dev": {
