--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "microsoft/azure-storage-blob": "*",
         "mollie/laravel-mollie": "^2.14",
         "phpmailer/phpmailer": "^6.6",
+        "pusher/pusher-php-server": "^7.2",
         "razorpay/razorpay": "^2.5",
         "sendgrid/sendgrid": "^7.6",
         "spatie/laravel-permission": "^5.5",
