--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue": "^0.8.0",
-        "ant-design-vue": "^1.7.8"
+        "ant-design-vue": "^1.7.8",
+        "vue-chat-scroll": "^1.4.0"
     }
 }
