--- a/.env-qa
+++ b/.env-qa
@@ -3,8 +3,8 @@ APP_ENV=local
 APP_KEY=base64:HjbkHgkCQqmXL1K/hr4Ma24Itw2QcZglZlqUZ7D4rRs=
 APP_DEBUG=true
 
-APP_URL=https://azapp-dureforce-dev.azurewebsites.net
-ASSET_URL=https://azapp-dureforce-dev.azurewebsites.net
+APP_URL=https://azapp-dureforce-qa.azurewebsites.net
+ASSET_URL=https://azapp-dureforce-qa.azurewebsites.net
 APP_FORCE_HTTPS=false
 
 LOG_CHANNEL=stack
@@ -13,7 +13,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=dureforce.mysql.database.azure.com
 DB_PORT=3306
-DB_DATABASE=dureforce_dev
+DB_DATABASE=dureforce_qa
 DB_USERNAME=dureforce_admin
 DB_PASSWORD=2e7atLLLyKEuHvVH4uVT
 
