--- a/.env-staging
+++ b/.env-staging
@@ -3,19 +3,19 @@ APP_ENV=local
 APP_KEY=base64:HjbkHgkCQqmXL1K/hr4Ma24Itw2QcZglZlqUZ7D4rRs=
 APP_DEBUG=true
 
-APP_URL=https://azapp-dureforce-dev.azurewebsites.net
-ASSET_URL=https://azapp-dureforce-dev.azurewebsites.net
+APP_URL=https://azapp-dureforce-staging.azurewebsites.net/
+ASSET_URL=https://azapp-dureforce-staging.azurewebsites.net/
 APP_FORCE_HTTPS=false
 
 LOG_CHANNEL=stack
 
-
 DB_CONNECTION=mysql
 DB_HOST=dureforce.mysql.database.azure.com
 DB_PORT=3306
-DB_DATABASE=dureforce_dev
+DB_DATABASE=dureforce_staging
 DB_USERNAME=dureforce_admin
 DB_PASSWORD=2e7atLLLyKEuHvVH4uVT
+
 
 
 AZURE_STORAGE_NAME=stgdureforcestg
@@ -24,3 +24,5 @@ AZURE_STORAGE_URL="https://stgdureforcestg.blob.core.windows.net"
 
 
 AZURE_STORAGE_SAS_URL="BlobEndpoint=https://stgdureforcestg.blob.core.windows.net/;QueueEndpoint=https://stgdureforcestg.queue.core.windows.net/;FileEndpoint=https://stgdureforcestg.file.core.windows.net/;TableEndpoint=https://stgdureforcestg.table.core.windows.net/;SharedAccessSignature=sv=2021-06-08&ss=bfqt&srt=sco&sp=rwdlacupiytfx&se=2023-03-01T14:48:26Z&st=2022-08-20T06:48:26Z&spr=https&sig=LcRsuAqjnX1XnWoZoM223duJWeAsnIWM0%2F5WxRc4FhA%3D"
+
+
