--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -3,6 +3,8 @@ server {
     root /html;
     index index.php;
     server_name localhost;
+    client_max_body_size 6M;
+
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
