--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -32,6 +32,8 @@ http {
         root /html;
         index index.php;
         server_name localhost;
+        client_max_body_size 6M;
+
 
         location / {
             try_files $uri $uri/ /index.php?$query_string;
