--- a/nginx-conf/php-8.1.ini
+++ b/nginx-conf/php-8.1.ini
@@ -646,6 +646,15 @@ report_memleaks = On
 ; https://php.net/variables-order
 variables_order = "GPCS"
 
+; Clear environment in FPM workers
+; Prevents arbitrary environment variables from reaching FPM worker processes
+; by clearing the environment in workers before env vars specified in this
+; pool configuration are added.
+; Setting to "no" will make all environment variables available to PHP code
+; via getenv(), $_ENV and $_SERVER.
+; Default Value: yes
+clear_env = no
+
 ; This directive determines which super global data (G,P & C) should be
 ; registered into the super global array REQUEST. If so, it also determines
 ; the order in which that data is registered. The values for this directive
