--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "messagebird/php-rest-api": "^1.20",
         "microsoft/azure-storage-blob": "*",
         "mollie/laravel-mollie": "^2.14",
+        "opcodesio/log-viewer": "^1.7",
         "phpmailer/phpmailer": "^6.6",
         "pusher/pusher-php-server": "^7.2",
         "razorpay/razorpay": "^2.5",
