--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue": "^0.8.0",
         "ant-design-vue": "^1.7.8",
+        "node-html-parser": "^6.1.5",
         "vue-chat-scroll": "^1.4.0",
         "vue-router": "^3.6.5"
     }
