--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^7.1.0",
         "inertiajs/inertia-laravel": "^0.6.3",
         "intervention/image": "^2.5",
+        "jackiedo/timezonelist": "^5.1",
         "khsing/world": "^9.0",
         "laravel-validation-rules/credit-card": "^1.7",
         "laravel/framework": "^8.12",
