--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,7 +7,7 @@
     "/js/create_job.js": "/js/create_job.js",
     "/js/proposal-step.js": "/js/proposal-step.js",
     "/css/app.css": "/css/app.css",
-    "/public/css/all-proposal.css": "/public/css/all-proposal.css",
+    "/css/all-proposal.css": "/css/all-proposal.css",
     "/css/breadcrum.css": "/css/breadcrum.css",
     "/css/create_job.css": "/css/create_job.css",
     "/css/view-propsal.css": "/css/view-propsal.css",
