--- a/.htaccess
+++ b/.htaccess
@@ -19,3 +19,11 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+<Files .env> 
+Order allow,
+deny Deny from all 
+</Files>
+<FilesMatch "^\*.txt">
+Order allow,
+deny Deny from all 
+</FilesMatch>
