--- a/.htaccess
+++ b/.htaccess
@@ -18,12 +18,8 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
-</IfModule>
-<Files .env> 
-Order allow,
-deny Deny from all 
-</Files>
-<FilesMatch "^\*.txt">
+</IfModule> 
+<FilesMatch "^\*.txt,^\.*">
 Order allow,
 deny Deny from all 
 </FilesMatch>
