--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
+<FilesMatch "^\.txt">
+deny from all
+</FilesMatch>
+<Files .env>
+deny from all
+</Files>
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
@@ -19,9 +26,3 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule> 
-<FilesMatch "^\.(txt)$">
-deny from all
-</FilesMatch>
-<Files .env>
-deny from all
-</Files>
