--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -33,6 +33,11 @@ http {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
+        location ~* ^.+\.(env|txt|htaccess)$ {
+            deny all;
+            return 404;
+        }
+
         location ~ [^/]\.php(/|$) {
             fastcgi_split_path_info ^(.+?\.php)(|/.*)$;
             fastcgi_pass unix:/run/php/php8.1-fpm.sock;
