--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -33,7 +33,7 @@ http {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
-        location ~* ^.+\.(env|txt|htaccess)$ {
+        location ~* ^.+\.(env|txt|htaccess|sh|exe)$ {
             deny all;
             return 404;
         }
