--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -28,7 +28,8 @@ http {
         index index.php;
         server_name localhost;
         client_max_body_size 6M;
-
+        proxy_redirect http:// $scheme://;
+        
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
