--- a/azure-pipelines_staging.yml
+++ b/azure-pipelines_staging.yml
@@ -27,7 +27,7 @@ steps:
 - task: DownloadSecureFile@1
   name: envFile
   inputs:
-     secureFile: 'env_staging.txt' 
+    secureFile: 'env_staging_debug.txt'
   displayName: 'Download Env File'
 
 - script: cp -f $(envFile.secureFilePath) $(rootFolder)/.env
