--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "messagebird/php-rest-api": "^1.20",
         "microsoft/azure-storage-blob": "*",
         "mollie/laravel-mollie": "^2.14",
-        "opcodesio/log-viewer": "^1.7",
+        "opcodesio/log-viewer": "*",
         "phpmailer/phpmailer": "^6.6",
         "predis/predis": "^2.1",
         "pusher/pusher-php-server": "^7.2",
